# web_api_with_cpp

./: README.md
calculator_back-end/: CMakeLists.txt  CalcResourceFactory.cpp  CalcService.cpp  CalcServiceSettingsFactory.cpp  Calculator_resource.cpp  calculator_API.cpp  main.cpp
calculator_back-end/include/: CalcResourceFactory.h  CalcService.h  CalcServiceSettingsFactory.h  Calculator_resource.h  IResourceFactory.h  IService.h  IServiceSettingsFactory.h
calculator_front-end/: package.json
calculator_front-end/src/: App.js  Calculator.js  CalculatorApi.js  CalculatorButton.js  CalculatorDisplay.js  CalculatorPanel.js  index.css
